scripts/gtopt_check_pampl/examples/errors/unbalanced_syntax.pampl
# =============================================================================
# Error: Unbalanced brackets and quotes
# =============================================================================
# Various syntax errors involving unmatched delimiters.

constraint bad_parens "Unmatched parenthesis":
  generator('G1').generation + generator('G2').generation <= 300;

# Missing closing bracket in monthly param
param bad_monthly[month] = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12;

# Unbalanced quote
constraint bad_quote:
  generator("G1).generation <= 100;
